welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:6: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime201.MethodsPictureLarge'
override def run() {
             ^