welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.code
override def run() {
}


override def run() {
for (j<-1 to 9){
	SousPartie();
}
}


def SousPartie() {
bloc();
gauche();
for(k<-1 to 5){
avance();
}
droite();
}


 def bloc() {
 for (j<-1 to 9){
 	carre();
 for (k<-1 to 5 ){
 avance();
 }
 }
 
}


 def carre() {
	faireV(Color.YELLOW);
	faireV(Color.RED);
	faireV(Color.BLUE);
	faireV(Color.GREEN);
}

def faireV(c:Color) {
	avance();
	setCouleurBrosse(c)
	baisseBrosse();
	leveBrosse();
	gauche();
	avance();
	droite();
	avance();
	baisseBrosse();
	leveBrosse();
	droite();
	avance();
	gauche();
	avance();
	baisseBrosse();
	leveBrosse();
	avance();
	gauche();
}




